# ScienceWorld

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: automatic-release-draft.yaml
src/: CMakeLists.txt  main.cpp
src/HelloWorlder/: CMakeLists.txt  HelloWorlder.cpp  HelloWorlder.h  HelloWorlder.hpp
tests/: CMakeLists.txt
tests/HelloWorlder/: CMakeLists.txt  hello_worlder_test1.cpp
